Bangla Added in Menu

--- a/RMS.App/Views/CancelRequisition/Create.cshtml
+++ b/RMS.App/Views/CancelRequisition/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Cancel Requisition</h2>
 <hr />
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create","CancelRequisition",FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
