--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -19,9 +19,9 @@
 }
 <div class="row">
     <div class="col-md-5">
-        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ownRequest">Request For Me</a> &nbsp;
-        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#forRequest">Request For Other</a> &nbsp;
-        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myRequest">My Request</a> &nbsp;
+        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ownRequest">@Resources.HomeText.RequestForMe</a> &nbsp;
+        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#forRequest">@Resources.HomeText.RequestForOther</a> &nbsp;
+        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myRequest">@Resources.HomeText.MyRequest</a> &nbsp;
     </div>
 </div>
 <br/>
