--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -59,36 +59,36 @@
 
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "Schedule")"><i class="fa fa-calendar"></i> Schedule Calendar</a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "Schedule")"><i class="fa fa-calendar"></i>@Resources.HomeText.Schedule</a>
                                 </div>
                                 <br /><br />
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Requests", "AssignRequisitions")"><i class="fa fa-car"></i> New Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("Requests", "AssignRequisitions")"><i class="fa fa-car"></i>@Resources.HomeText.NewRequisition </a>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "AssignRequisitions")"><i class="fa fa-car"></i> Assigned Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "AssignRequisitions")"><i class="fa fa-car"></i> @Resources.HomeText.AssignRequisitions </a>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "CancelRequisition")"><i class="fa fa-car"></i> Cancelled Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "CancelRequisition")"><i class="fa fa-car"></i> @Resources.HomeText.CancelRequisition </a>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("OnProcess", "AssignRequisitions")"><i class="fa fa-car"></i> OnProcess Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("OnProcess", "AssignRequisitions")"><i class="fa fa-car"></i> @Resources.HomeText.OnProcess </a>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("CompleteRequest", "AssignRequisitions")"><i class="fa fa-car"></i> Completed Requisitions </a>
+                                    <a class="dropdown-item" href="@Url.Action("CompleteRequest", "AssignRequisitions")"><i class="fa fa-car"></i> @Resources.HomeText.CompleteRequest </a>
                                 </div>
 
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "RequisitionStatus")"><i class="fa fa-car"></i> Requisitions Status </a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "RequisitionStatus")"><i class="fa fa-car"></i> @Resources.HomeText.RequisitionsStatus </a>
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
-                                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")"><i class="fa fa-car"></i> Total Requisition</a>
+                                    <a class="dropdown-item" href="@Url.Action("Index", "Requisitions")"><i class="fa fa-car"></i> @Resources.HomeText.TotalRequisition</a>
                                 </div>
                                 
                                 
@@ -103,7 +103,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h3 class="text-dark">
-                                        <i class="fa fa-print" aria-hidden="true"></i> Report
+                                        <i class="fa fa-print" aria-hidden="true"></i> @Resources.HomeText.Report
                                     </h3>
                                     <hr/>
                                 </div>
@@ -124,7 +124,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h3 class="text-dark">
-                                        <i class="fa fa-search" aria-hidden="true"></i> Service
+                                        <i class="fa fa-search" aria-hidden="true"></i> @Resources.HomeText.Service
                                     </h3>
                                     <hr/>
                                 </div>
