Assign Requisition done depend on End Date Time and Recent Request View Problem Resolve

--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -220,7 +220,7 @@
             </div>
 
             <div class="modal-body">
-                <p id="details"></p>
+                <p id="driverDetails"></p>
             </div>
 
             <div class="modal-footer">
@@ -244,6 +244,7 @@
 
             <div class="modal-body">
                 <p id="vehicleDetails"></p>
+                @*<p id="vehicleAvailable"></p>*@
             </div>
 
             <div class="modal-footer">
