--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -49,7 +49,7 @@
 <div class="col-md-12">
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
-        <tr class="bg-info">
+        <tr class="bg-secondary text-white">
             <th>SL</th>
             <th>Action</th>
             <th>From Place</th>
@@ -61,7 +61,7 @@
             <th>Requisition Type</th>
             <th>Request For : </th>
             <th>Purpose Of Visit : </th>
-            
+
         </tr>
         </thead>
         <tbody>
@@ -73,6 +73,7 @@
         @{
             if (data!=null)
             {
+
                 foreach (var item in data)
                 {
                     sl++;
@@ -107,6 +108,11 @@
                         {
                             <td class="text-success">@item.StatusType</td>
                         }
+                        @if (@item.StatusType == "Assigned")
+                        {
+                            <td class="text-success">@item.StatusType</td>
+                        }
+
                         @if (@item.StatusType == "OnExecute")
                         {
                             <td class="text-info">@item.StatusType</td>
