--- a/RMS.App/Views/Schedule/Index.cshtml
+++ b/RMS.App/Views/Schedule/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Schedule Calendar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Assigned Schedule </h2>
+<h2>Request Schedule </h2>
 <br/>
 <div id="calendar">
 
