--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Requisition's Status";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,7 +14,7 @@
 
 }
 <div class="container">
-    <h2>Assigned Requisition</h2>
+    <h2>Requisition's Status</h2>
     <hr />
 
     @if (TempData["msg"] != null)
@@ -84,7 +84,19 @@
                             <td>
 
                                 @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new {@class = "btn btn-primary btn-sm"})
-                                @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new {id = item.Id}, new {@class = "btn btn-success btn-sm"})
+                                @if (item.StatusType == "Assigned")
+                                {
+                                    @Html.ActionLink("CheckIn", "CheckIn", "GatePass", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
+                                }
+                                @if (item.StatusType == "OnExecute")
+                                {
+                                    @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
+                                }
+                                
+                                @if (item.StatusType == "Hold")
+                                {
+                                   @Html.ActionLink("Assign", "Create", "AssignRequisitions", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-success btn-sm" })
+                                }
 
                             </td>
                             @if (@item.StatusType == "New")
@@ -108,6 +120,10 @@
                                 <td class="text-info">
                                     @item.StatusType
                                 </td>
+                            }
+                            @if (@item.StatusType == "Hold")
+                            {
+                                <td class="text-warning">@item.StatusType</td>
                             }
                             <td>
                                 @Html.DisplayFor(modelItem => item.RequisitionNumber)
