--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -86,7 +86,7 @@
                             {
                                 @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })
                             }
-
+                            
                             @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" })
 
                             @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }, new { @class = "btn btn-info btn-sm" })
@@ -117,6 +117,11 @@
                         {
                             <td class="text-info">@item.StatusType</td>
                         }
+                        @if (@item.StatusType == "Hold")
+                        {
+                            <td class="text-info">@item.StatusType</td>
+                        }
+
                         <td>@item.Requisition.SubmitDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
                         <td>@item.Requisition.RequisitionType</td>
                         <td>@item.Requisition.RequestFor</td>
