--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -128,6 +128,10 @@
                         {
                             <td class="text-info">@item.StatusType</td>
                         }
+                        @if (@item.StatusType == "Hold")
+                        {
+                            <td class="text-info">@item.StatusType</td>
+                        }
                         <td>
                             @item.Requisition.SubmitDateTime.ToString("dd MMM yyyy hh:mm tt")
                         </td>
