--- a/RMS.App/Views/Schedule/Index.cshtml
+++ b/RMS.App/Views/Schedule/Index.cshtml
@@ -30,9 +30,9 @@
             <div class="modal-footer">
                 <button id="btnCheckIn" class="btn btn-success pull-right">CheckIn</button>
                 <button id="btnCheckOut" class="btn btn-success pull-right">CheckOut</button>
-
-                <button id="btnAssign" class="btn btn-success pull-right">Assign Requisition</button>
+                <button id="btnAssign" class="btn btn-success pull-right">Assign</button>
                 <button id="btnCancel" class="btn btn-success pull-right">Cancel Requisition</button>
+                <button id="btnHold" class="btn btn-success pull-right">Hold Requisition</button>
                 <a href="#" class="btn btn-warning" title="Close" data-dismiss="modal"> Close </a>
             </div>
         </div>
