--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -67,6 +67,10 @@
                                 </div>
                                 <br/><br/>
                                 <div class="col-md-12">
+                                    <a class="dropdown-item" href="@Url.Action("Index", "HoldRequisition")"><i class="fa fa-car"></i> Hold Requisitions </a>
+                                </div>
+                                <br /><br />
+                                <div class="col-md-12">
                                     <a class="dropdown-item" href="@Url.Action("Index", "AssignRequisitions")"><i class="fa fa-car"></i> @Resources.HomeText.AssignRequisitions </a>
                                 </div>
                                 <br/><br/>
