--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Assigned Requisitions";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
