--- a/RMS.App/Views/HoldRequisition/HoldRequestCreate.cshtml
+++ b/RMS.App/Views/HoldRequisition/HoldRequestCreate.cshtml
@@ -6,77 +6,157 @@
 
 
 <div class="container">
-    @if (TempData["msg"] != null)
-    {
-        <div class="alert alert-danger">
-            @Html.Raw(TempData["msg"])
-        </div>
-    }
 
-   
-       
-    
-    
-  
+
+        @if (Model != null)
+        {
+            var data = ViewBag.Requisition;
+
+            <div class="col-md-6">
+
+                <div class="row">
+                    <div>
+                        <h4>Requisitor Info :</h4><br/>
+                    </div>
+
+                    <table class="table table-bordered">
+                       
+                        @if (data.Requisition.RequestFor == "Own")
+                        {
+                            <tr>
+                                <td class="col-md-2-custom" style="width: 45%">@Html.DisplayName("Requestor Name ")</td>
+                                <td>@data.Requisition.Employee.FullName</td>
+                            </tr>
+                        }
+                        @if (data.Requisition.RequestFor != "Own")
+                        {
+                            <tr>
+                                <td class="col-md-2-custom" style="width: 45%">@Html.DisplayName("Requisition For ")</td>
+                                <td>@data.RequestFor</td>
+                            </tr>
+                            <tr>
+                                <td class="col-md-2-custom">@Html.DisplayName("Requiest By ")</td>
+                                <td>@data.Requisition.Employee.FullName</td>
+                            </tr>
+                        }
+
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Designation ")</td>
+                            <td>@data.Requisition.Employee.Designation.Title</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Contact No ")</td>
+                            <td>@data.Requisition.Employee.ContactNo</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Email ")</td>
+                            <td>@data.Requisition.Employee.Email</td>
+                        </tr>
+
+                    </table>
+                </div>
+
+                <div class="row">
+                    <div>
+                        <h4>Journey Info :</h4><br/>
+                    </div>
+
+                    <table class="table table-bordered">
+                        <tr>
+                            <td class="col-md-2-custom" style="width: 45%">@Html.DisplayName("Journey Date And Time ")</td>
+                            <td>@data.Requisition.StartDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Return Date And Time ")</td>
+                            <td>@data.Requisition.EndDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("From Place ")</td>
+                            <td>@data.Requisition.FromPlace</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Destination Place ")</td>
+                            <td>@data.Requisition.DestinationPlace</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Passenger Qty ")</td>
+                            <td>@data.Requisition.PassengerQty</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Submited Date And Time ")</td>
+                            <td>@data.Requisition.SubmitDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom" style="width: 45%">@Html.DisplayName("Requisition Type ")</td>
+                            <td>@data.Requisition.RequisitionType</td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-2-custom">@Html.DisplayName("Description ")</td>
+                            <td>@data.Requisition.Description</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        }
+    <div class="col-md-1"></div>
+
+
+
+
 
         <div class="col-md-5">
             <div class="row">
                 <h4>Assign Requisition</h4>
-                <br/>
+                <br />
                 @using (Html.BeginForm("Create", "AssignRequisitions", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-
-                    var data = ViewBag.Requisition;
                     <div class="form-horizontal">
 
-                        @if (TempData["StatusMsg"] != null)
-                        {
-                            <div class="alert alert-danger">
-                                @Html.Raw(TempData["StatusMsg"])
-                            </div>
-                        }
-                        <br/>
-                        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-                        
+
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 
 
                         <div class="form-group row">
 
-                            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new {@class = "control-label col-md-3"})
+                            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
-                                @Html.TextBoxFor(model=>model.RequisitionNumber, null, htmlAttributes: new {@class = "form-control", @readonly = "readonly"})
-                                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new {@class = "text-danger"})
+                                @Html.TextBoxFor(model => model.RequisitionNumber, null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
+                                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            @Html.Label("Vehicle Type", htmlAttributes: new {@class = "control-label col-md-3"})
+                            @Html.Label("Vehicle Type", htmlAttributes: new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
                                 @if (Model != null)
                                 {
-                                    @Html.DropDownList("VehicleType", new SelectList(Model.VehicleTypes, "Id", "Name"), "Select Veicle Type", htmlAttributes: new {@class = "dropdown form-control", @id = "vehicleTypeDD"})
+                                    @Html.DropDownList("VehicleType", new SelectList(Model.VehicleTypes, "Id", "Name"), "Select Veicle Type", htmlAttributes: new { @class = "dropdown form-control", @id = "vehicleTypeDD" })
                                 }
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            @Html.LabelFor(model => model.VehicleId, htmlAttributes: new {@class = "control-label col-md-3"})
+                            @Html.LabelFor(model => model.VehicleId, htmlAttributes: new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
 
-                                @Html.DropDownList("VehicleId", null, htmlAttributes: new {@class = "dropdown form-control", @id = "vehicleDD"})
+                                @Html.DropDownList("VehicleId", null, htmlAttributes: new { @class = "dropdown form-control", @id = "vehicleDD" })
 
-                                @Html.ValidationMessageFor(model => model.VehicleId, "", new {@class = "text-danger"})
+                                @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
 
                             </div>
                         </div>
 
 
                         <div class="form-group row">
-                            @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new {@class = "control-label col-md-3"})
+                            @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-3" })
                             <div class="col-md-9">
-                                @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new {@class = "form-control", @id ="driverDD" @*"searchableDD3"*@})
-                                @Html.ValidationMessageFor(model => model.EmployeeId, "", new {@class = "text-danger"})
+                                @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new
+                           {
+                               @class = "form-control",
+                               @id = "driverDD" @*"searchableDD3"*@})
+                                @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
@@ -85,8 +165,8 @@
                         <div class="form-group row">
                             <div class="col-md-3"></div>
                             <div class="col-md-9">
-                                <input type="submit" value="Assign" class="btn btn-success"/> &nbsp;
-                                @Html.ActionLink("Back to List", "Requests", null, new {@class = "btn btn-info"})
+                                <input type="submit" value="Assign" class="btn btn-success" /> &nbsp;
+                                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
                             </div>
                         </div>
                     </div>
@@ -95,7 +175,7 @@
         </div>
 
     </div>
-</div>
+
 
 
 
