--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -26,7 +26,7 @@
 
                 <div class="row">
                     <div>
-                        <h4>Requisitor Info :</h4><br/>
+                        <h4>Requestor Information :</h4><br/>
                     </div>
 
                     <table class="table table-bordered">
@@ -71,7 +71,7 @@
 
                 <div class="row">
                     <div>
-                        <h4>Journey Info :</h4><br/>
+                        <h4>Journey Information :</h4><br/>
                     </div>
 
                     <table class="table table-bordered">
@@ -259,8 +259,9 @@
 @section Scripts {
 
      @Scripts.Render("~/bundles/jqueryval")
+<script src="~/Scripts/chosenDD/chosen_DD.js"></script>
      <script src="~/Scripts/AssignRequisitionJs/AssignRequisitionCreateJs.js"></script>
-    <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
+  
     }
 
 
